# Test: start a new workout session then cancel it.
appId: com.gfaure.logworkout
---
- extendedWaitUntil:
    visible:
      text: "LogOut"
    timeout: 120000
- tapOn: "+"
- assertVisible: "Active Session"
- tapOn: "Cancel Session"
- assertVisible: "LogOut"
